update time series section, probability review added KL divergence, entropy mutual information, math stats added clt delta method transformations of rv

--- a/_toc.yml
+++ b/_toc.yml
@@ -21,3 +21,8 @@
   chapters:
     - file: Mathematical_Statistics/Mathematical Statistics
 
+- part: Time Series
+  chapters:
+    - file: Time_Series/Stationarity
+    - file: Time_Series/Autoregressive Models
+    - file: Time_Series/Granger Causality
