add ref to some things in prob review, and math on VAE

--- a/_toc.yml
+++ b/_toc.yml
@@ -26,3 +26,7 @@
     - file: Time_Series/Stationarity
     - file: Time_Series/Autoregressive Models
     - file: Time_Series/Granger Causality
+
+- part: Encoders
+  chapters:
+    -file: Encoders/Variational_Auto_Encoders
